--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"autoprefixer": "^10.4.12",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.5.3",
